 * Fix: "X minutes ago" timestamps are now marked for translation (Janneke Janssen, Matt Westcott)
 * Fix: Avoid indexing unsaved field content on `save(update_fields=[...])` operations (Matt Westcott)
 * Fix: Corrected ordering of arguments passed to ModelAdmin `get_extra_class_names_for_field_col` / `get_extra_attrs_for_field_col` methods (Andy Babic)


1.8.1 (26.01.2017)
~~~~~~~~~~~~~~~~~~

 * Fix: Reduced `Rendition.focal_point_key` field length to prevent migration failure when upgrading to Wagtail 1.8 on MySQL with `utf8` character encoding (Andy Chosak, Matt Westcott)


1.8 (15.12.2016)
~~~~~~~~~~~~~~~~

 * New page privacy options (Shawn Makinson, Tom Miller, Luca Perico, Matt Westcott)
 * New 'bulk delete' permission type for deleting pages with children (Matt Westcott)
 * Elasticsearch 5 support (Karl Hobley)
 * Added support of a custom `edit_handler` in site settings (Axel Haustant)
 * Added `get_landing_page_template` getter method to `AbstractForm` (Gagaro)
 * Added `Page.get_admin_display_title` method to override how the title is displayed in the admin (Henk-Jan van Hasselaar)
 * Added support for specifying custom HTML attributes for table rows on ModelAdmin index pages (Andy Babic)
 * Added `first_common_ancestor` method to `PageQuerySet` (Tim Heap)
 * Page chooser now opens at the deepest ancestor page that covers all the pages of the required page type (Tim Heap)
 * `PageChooserBlock` now accepts a `target_model` option to specify the required page type (Tim Heap)
 * Modeladmin forms now respect `fields` / `exclude` options passed on custom model forms (Thejaswi Puthraya)
 * Added new StreamField block type `StaticBlock` (Benoît Vogel)
 * Added new StreamField block type `BlockQuoteBlock` (Scot Hacker)
 * Updated Cloudflare cache module to use the v4 API (Albert O'Connor)
 * Added `exclude_from_explorer` attribute to the `ModelAdmin` class to allow hiding instances of a page type from Wagtail's explorer views (Andy Babic)